Revert "Merge branch 'main' of https://github.com/RidyCh/api.nilaiku"
This reverts commit f1798b2afd6458ee7599d04dd180f25f2178c95d, reversing
changes made to 77b2e1934494914995d94224f4abd1e39701c0fb.
