# routes/api/v1/prediction.php
@@ -4,4 +4,3 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\V1\PredictionController;
 
 Route::post('/', [PredictionController::class, 'predict']);
-Route::get('/academic-record/{student_id}', [PredictionController::class, 'showAcademicRecordByStudentId']);
