# storage/api-docs/api-docs.json
@@ -474,133 +474,6 @@
                 }
             }
         },
-        "/api/v1/predict/academic-record/{student_id}": {
-            "get": {
-                "tags": [
-                    "Predict"
-                ],
-                "summary": "Data detail prediksi berdasarkan ID student",
-                "description": "Mengembalikan data detail prediksi berdasarkan ID student yang melakukan prediksi.",
-                "operationId": "e9f28499b77453af6a0916dcb6ddf157",
-                "parameters": [
-                    {
-                        "name": "student_id",
-                        "in": "path",
-                        "description": "ID student",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64",
-                            "example": 1
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully retrieved data",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Successfully retrieved data"
-                                        },
-                                        "prediction": {
-                                            "properties": {
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "student_id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "subject_id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "input_date": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2025-04-11T08:31:54.812441Z"
-                                                },
-                                                "attendance": {
-                                                    "type": "integer",
-                                                    "example": 0
-                                                },
-                                                "hours_studied": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 0
-                                                },
-                                                "previous_scores": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 0
-                                                },
-                                                "sleep_hours": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 0
-                                                },
-                                                "tutoring_sessions": {
-                                                    "type": "integer",
-                                                    "example": 0
-                                                },
-                                                "peer_influence": {
-                                                    "type": "string",
-                                                    "example": "negative"
-                                                },
-                                                "motivation_level": {
-                                                    "type": "string",
-                                                    "example": "low"
-                                                },
-                                                "teacher_quality": {
-                                                    "type": "string",
-                                                    "example": "low"
-                                                },
-                                                "access_to_resources": {
-                                                    "type": "string",
-                                                    "example": "low"
-                                                },
-                                                "predicted_score": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 85.58453369140625
-                                                },
-                                                "recommendation": {
-                                                    "type": "string",
-                                                    "example": "Excellent performance"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Data not found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "type": "string",
-                                            "example": "Data not found"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/students": {
             "post": {
                 "tags": [
@@ -835,100 +708,6 @@
                                         "error": {
                                             "type": "string",
                                             "example": "Data not found"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Students"
-                ],
-                "summary": "Update data student (guest atau user)",
-                "description": "Mengubah data student berdasarkan guest session atau user yang login.",
-                "operationId": "f75661568c0155b220ef5fdbe5b8f85b",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID dari student yang ingin diupdate",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "name",
-                                    "age",
-                                    "gender",
-                                    "education"
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "Jane Doe"
-                                    },
-                                    "age": {
-                                        "type": "integer",
-                                        "example": 21
-                                    },
-                                    "gender": {
-                                        "type": "string",
-                                        "enum": [
-                                            "male",
-                                            "female"
-                                        ],
-                                        "example": "female"
-                                    },
-                                    "education": {
-                                        "type": "string",
-                                        "example": "SMK Cibitung 1"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Student updated successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Student updated successfully"
-                                        },
-                                        "student": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Student not found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Student not found"
                                         }
                                     },
                                     "type": "object"
